@@ -1,3 +1,5 @@
 ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------
 
-* geom_text gains parse argument which makes it possible to display expressions (implements #50)
+* geom_text gains parse argument which makes it possible to display
+  expressions (implements #50)
+* stat_contour & stat_density2d: fix grouping bugs (issue #7)
